feat: update toolbar style

--- a/packages/discovery-react-components/.storybook/styles.scss
+++ b/packages/discovery-react-components/.storybook/styles.scss
@@ -1,1 +1,4 @@
 @import '~@ibm-watson/discovery-styles/scss/index';
+
+// for document-preview-toolbar story
+@import '~carbon-components/scss/components/overflow-menu/overflow-menu';
