--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -129,6 +129,10 @@ h1 {
     top: $nav-toolbar-height;
   }
 
+  .#{$prefix}--loading-overlay {
+    background-color: unset;
+  }
+
   .#{$prefix}--search-app__tabs {
     flex: 0 0 auto;
   }
