--- a/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
@@ -3,6 +3,7 @@
   flex-flow: column;
   height: 100%;
   min-width: 800px;
+  background-color: $ui-background;
 
   .#{$prefix}--ci-doc__toolbar {
     width: 100%;
